---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"class Foo\")"
---
(
    Root@0..9
      StatementList@0..9
        Class@0..9
          ClassKw@0..5 "class"
          Whitespace@5..6 " "
          Identifier@6..9
            Id@6..9 "Foo"
          RecordBody@9..9
            ParentClassList@9..9
            Body@9..9
    ,
    [
        SyntaxError {
            range: 9..9,
            message: "expected ';' or '{' to start body",
        },
    ],
)
